[gd_scene load_steps=14 format=3 uid="uid://bwjq8x7vx3k1v"]

[ext_resource type="PackedScene" uid="uid://cx8v2laqj5m3n" path="res://scenes/player/player.tscn" id="1_player"]
[ext_resource type="PackedScene" uid="uid://bxy8k2v3n4m5p" path="res://scenes/bullets/bullet.tscn" id="2_0wfyh"]
[ext_resource type="PackedScene" path="res://scenes/ui/character_indicator.tscn" id="3_indicator"]
[ext_resource type="Script" uid="uid://c878wjx6gkyb1" path="res://scripts/ui/hpbar.gd" id="4_jyhfs"]
[ext_resource type="Texture2D" uid="uid://dvt2g5x1xbc8a" path="res://assets/ui/hpbar/progress-bar-under.png" id="5_o6xl0"]
[ext_resource type="Texture2D" uid="uid://dqv0dk2atv6jo" path="res://assets/ui/hpbar/progress-bar.png" id="6_tipki"]
[ext_resource type="Texture2D" uid="uid://bymqtonq1j6l3" path="res://assets/ui/Sci-Fi Blue/PNG/01_Element_gage/status_opponent_user_frame.png" id="7_o6xl0"]
[ext_resource type="Script" uid="uid://iqibts3kvpuo" path="res://scripts/ui/ammo_counter.gd" id="8_tipki"]
[ext_resource type="Texture2D" uid="uid://dw0jycvar2dgh" path="res://assets/ui/ammo-counter.png" id="9_85g3d"]
[ext_resource type="Texture2D" uid="uid://bpof5ytqaputf" path="res://assets/ui/Frame.png" id="10_ya4ey"]
[ext_resource type="Texture2D" uid="uid://micb5p0i5yt" path="res://assets/ui/ellipse_under.png" id="11_eb6dy"]

[sub_resource type="Gradient" id="Gradient_0wfyh"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_sugp2"]
gradient = SubResource("Gradient_0wfyh")

[node name="Main" type="Node2D"]

[node name="Player" parent="." instance=ExtResource("1_player")]
bullet_scene = ExtResource("2_0wfyh")

[node name="CharacterIndicator" parent="." instance=ExtResource("3_indicator")]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(365, 100)
texture = SubResource("GradientTexture2D_sugp2")

[node name="HpBar" type="CanvasLayer" parent="."]
script = ExtResource("4_jyhfs")

[node name="TextureProgressBar" type="TextureProgressBar" parent="HpBar"]
offset_left = 225.0
offset_top = 922.0
offset_right = 659.0
offset_bottom = 995.0
value = 100.0
exp_edit = true
texture_under = ExtResource("5_o6xl0")
texture_progress = ExtResource("6_tipki")
texture_progress_offset = Vector2(59.755, 13.37)

[node name="StatusOpponentUserFrame" type="Sprite2D" parent="HpBar"]
position = Vector2(127, 962)
texture = ExtResource("7_o6xl0")

[node name="AmmoCounter" type="CanvasLayer" parent="."]
script = ExtResource("8_tipki")

[node name="AmmoCounter2" type="Sprite2D" parent="AmmoCounter"]
position = Vector2(1751, 1013)
texture = ExtResource("9_85g3d")

[node name="AmmoLabel" type="Label" parent="AmmoCounter"]
texture_filter = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1757.0
offset_top = -86.0
offset_right = 1907.0
offset_bottom = -36.0
grow_vertical = 0
theme_override_font_sizes/font_size = 32
text = "20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReloadProgress" type="TextureProgressBar" parent="AmmoCounter"]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1802.0
offset_top = -93.0
offset_right = 1924.0
offset_bottom = 29.0
grow_vertical = 0
fill_mode = 2
texture_under = ExtResource("10_ya4ey")
texture_progress = ExtResource("11_eb6dy")
